--- a/pom.xml
+++ b/pom.xml
@@ -83,7 +83,11 @@
             <version>${kotlin.version}</version>
             <scope>test</scope>
         </dependency>
-
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk-s3</artifactId>
+			<version>1.12.310</version>
+		</dependency>
     </dependencies>
 
 	<build>
