--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 spring.application.name=hms
 spring.datasource.url=jdbc:mysql://localhost:3306/hmsdb
-
 spring.datasource.username=root
 spring.datasource.password=Satya@1202
 spring.jpa.show-sql=true
@@ -9,3 +8,16 @@ spring.jpa.hibernate.ddl-auto=update
 jwt.algorithm.key=hysgfiuwe-hdlkwejmdfwewb-fwebefknermgl
 jwt.issuer=satya
 jwt.expiry.duration=86400000
+
+
+#s3
+accessKey=AKIATBRPQBKRGZSBUYV2
+secretKey=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
+region=ap-southeast-2
+cloud.aws.region.static=ap-southeast-2
+cloud.aws.stack.auto=false
+cloud.aws.region.auto=false
+spring.main.allow-bean-definition-overriding=true
+logging.level.com.amazonaws.util.EC2MetadataUtils=error
+logging.level.com.amazonaws.internal.InstanceMetadataService=error
+
