Java Class -11-nov-2024

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,14 @@ jwt.issuer=satya
 jwt.expiry.duration=86400000
 
 
-
+#s3
+accessKey=AKIATBRPQBKRGZSBUYV2
+secretKey=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
+region=ap-southeast-2
+cloud.aws.region.static=ap-southeast-2
+cloud.aws.stack.auto=false
+cloud.aws.region.auto=false
+spring.main.allow-bean-definition-overriding=true
+logging.level.com.amazonaws.util.EC2MetadataUtils=error
+logging.level.com.amazonaws.internal.InstanceMetadataService=error
 
