--- a/pom.xml
+++ b/pom.xml
@@ -93,7 +93,16 @@
 			<artifactId>itextpdf</artifactId>
 			<version>5.5.13.3</version>
 		</dependency>
-    </dependencies>
+
+		<dependency>
+			<groupId>com.twilio.sdk</groupId>
+			<artifactId>twilio</artifactId>
+			<version>10.1.0</version>
+		</dependency>
+		
+
+
+	</dependencies>
 
 	<build>
 		<plugins>
