--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,10 @@
 			<artifactId>jakarta.mail-api</artifactId>
 			<version>2.0.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
 
 	</dependencies>
 
