--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=hms
-spring.datasource.url=jdbc:mysql://localhost:3306/hmsdb
+spring.datasource.url=jdbc:mysql://localhost:3306/hmsdb1
 spring.datasource.username=root
-spring.datasource.password=Satya@1202
+spring.datasource.password=test
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
 
